# swe-szn

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/swe_szn/: __init__.py  analyze.py  chat.py  cli.py  config.py
src/swe_szn/prompts/: __init__.py  swe_intern.yml  swe_intern_chat.yml
src/swe_szn/services/: cache.py  codex.py  firecrawl.py  openai.py  resume.py
src/swe_szn/services/openai/: __init__.py  analysis.py  chat.py  client.py  models.py
src/swe_szn/ui/: config.py  markdown.py  rich.py
