[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swe-szn"
version = "0.1.0"
description = "a tool neccessary during swe application season"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer==0.16.1",
    "openai==1.102.0",
    "firecrawl==3.4.0",
    "pypdf==6.0.0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.0",
    "black==24.1.1",
    "isort==5.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["swe_szn*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["swe_szn"]
skip_glob = ["*/__pycache__/*", "*/migrations/*"]

[project.scripts]
swe-szn = "swe_szn.cli:app"
